# CoreSwift-CRM

./: .env.dev  .env.example  .gitignore  Cargo.toml  Dockerfile  GUARDRAILS.md  Makefile  REQUIREMENTS.md  SOUL.md  TASKS.md  VERIFICATION.md  VERIFICATION_NATIVE.md  analyze_mismatches.py  audit_all_schemas.py  crm-swift.ps1  deploy-from-vps.sh  docker-compose.yml  openclaw-agent.md  schema-fix-report.md  seed-b2b-automation.sql  setup.sh  supabase-schema.sql
.openclaw/: workspace-state.json
crmswift/: Dockerfile  package-lock.json  package.json
docs/: ADMIN_GUIDE.md  frontend-backend-mapping.md
memory/: core-swift-handoff.md
migrations/: 001_create_tenants.sql  0021_create_tracked_links_and_actions.sql  002_create_users.sql  003_create_contacts.sql  004_create_companies.sql  005_create_pipelines.sql  006_create_pipeline_stages.sql  007_create_opportunities.sql  008_create_tags.sql  009_create_tag_assignments.sql  010_create_score_rules.sql  011_create_scores.sql  012_create_lists.sql  013_create_list_members.sql  014_create_automation_rules.sql  015_create_integrations.sql  016_create_tag_mappings.sql  017_create_webhooks.sql  018_create_audit_logs.sql  019_seed_data.sql  020_create_plans_and_affiliates.sql  021_create_event_bus_and_comms.sql  021_fix_contact_scores.sql.backup  022_create_flawless_followup.sql  023_create_business_profiles.sql  024_create_credits.sql  025_create_native_app_connections.sql  026_create_tenant_invites.sql  027_create_affiliate_products.sql  028_create_affiliate_product_selections.sql  029_create_email_campaigns.sql  034_plans.sql  (+27 more)
(+172 files in other folders)
